fix spacing between entries + update cookbook image

--- a/src/scss/Items.scss
+++ b/src/scss/Items.scss
@@ -41,7 +41,7 @@
 
     @include down($desktop) {
         margin-left: 0;
-        margin-bottom: 48px;
+        margin-bottom: 80px;
         padding: 0;
         &:first-of-type {
             margin-top: 32px;
